--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -1,8 +1,6 @@
 name: Terraform Pipeline
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:  # Isso permite que você acione manualmente o fluxo de trabalho
 
 jobs:
   terraform:
@@ -21,7 +19,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
+          aws-region: us-east-2
 
       - name: Terraform Init
         run: terraform init
