--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -26,5 +26,8 @@ jobs:
       - name: Initialize Terraform
         run: terraform init
 
+      - name: Terraform Plan
+        run: terraform plan
+
       - name: Destroy Terraform
         run: terraform destroy -auto-approve
