feature: rename pipeline

--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -1,4 +1,4 @@
-name: Terraform Pipeline
+name: Build Infrastructure
 on:
   workflow_dispatch:  # Isso permite que você acione manualmente o fluxo de trabalho
 
