--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,8 +1,16 @@
-server {
-    listen 8080;
+# Exemplo de `nginx.conf` corrigido:
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
+events {
+    worker_connections 1024;
+}
+
+http {
+    server {
+        listen 8080;
+
+        location / {
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+        }
     }
 }
